// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fragment/AppWrapper/subscribeFormAction will display a danger alert when the request fails 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      data-v-app=""
      div=""
      id="plugin__12e5"
    >
      
      <div
        class="ss-alert ss-alert--success slide-top-enter-from slide-top-enter-active"
      >
        <div
          class="ss-alert--icon"
        >
          <svg
            class=""
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="ss-alert--wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="ss-alert--content"
          >
            <label>
              cms.hero.create.success
            </label>
          </div>
        </div>
      </div>
      <div
        class="ss-alert ss-alert--danger slide-top-enter-from slide-top-enter-active"
      >
        <div
          class="ss-alert--icon"
        >
          <svg
            class=""
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="ss-alert--wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="ss-alert--content"
          >
            <label>
              internal.error
            </label>
          </div>
        </div>
      </div>
      <div
        class="ss-alert ss-alert--danger slide-top-enter-from slide-top-enter-active"
      >
        <div
          class="ss-alert--icon"
        >
          <svg
            class=""
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="ss-alert--wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="ss-alert--content"
          >
            <label>
              internal.error
            </label>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-alert-container"
    id="plugin__12e5"
    role="alert"
  />
</body>
`;

exports[`fragment/AppWrapper/subscribeFormAction will display a success alert when the request is successful 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      data-v-app=""
      div=""
      id="plugin__12e5"
    >
      
      <div
        class="ss-alert ss-alert--success slide-top-enter-from slide-top-enter-active"
      >
        <div
          class="ss-alert--icon"
        >
          <svg
            class=""
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="ss-alert--wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <div
            class="ss-alert--content"
          >
            <label>
              cms.hero.create.success
            </label>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-alert-container"
    id="plugin__12e5"
    role="alert"
  />
</body>
`;

exports[`fragment/AppWrapper/subscribeFormAction will not display a success alert when the request body has not action properties 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      data-v-app=""
      div=""
      id="plugin__12e5"
    >
      
      
    </div>
  </div>
  <div
    class="ss-alert-container"
    id="plugin__12e5"
    role="alert"
  />
</body>
`;

exports[`fragment/AppWrapper/subscribeFormAction will render children and match snapshot 1`] = `<span class="ss-badge ss-badge--success ss-badge--xs text-bold"><div class="ss-badge--wrapper"><!--v-if--><div class="ss-badge--label">its_ferdi</div></div></span>`;
